--- a/Natours/starter/index.html
+++ b/Natours/starter/index.html
@@ -20,7 +20,9 @@
           <div class="text-box">
             <h1 class="heading-primary">
               <span class="heading-primary-main">OUTDOORS</span>
-              <span class="heading-primary-sub">is where life happens</span></h1>
+              <span class="heading-primary-sub">is where life happens</span>
+            </h1>
+            <a href="#" class="btn btn-white">Discover our Tours</a>
           </div>
 
 
