--- a/Natours/starter/index.html
+++ b/Natours/starter/index.html
@@ -22,7 +22,7 @@
               <span class="heading-primary-main">OUTDOORS</span>
               <span class="heading-primary-sub">is where life happens</span>
             </h1>
-            <a href="#" class="btn btn-white">Discover our Tours</a>
+            <a href="#" class="btn btn-white btn-animated">Discover our Tours</a>
           </div>
 
 
